# AutomatedResearchReportGeneration

./: .gitignore  Dockerfile.jenkins  Jenkinsfile  Project3 Assignment.txt  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  get_lib_versions.py  jj.ipynb  main.py  pyproject.toml  requirements.txt  users.db
Research_and_Analyst/api/routes/: report_routes.py
Research_and_Analyst/api/services/: report_service.py
Research_and_Analyst/notebook/: test.ipynb
Research_and_Analyst/utils/: config_loader.py  model_loader.py
Research_and_Analyst/workflows/: interview_workflow.py  report_generator_workflow.py
archive/research_and_analyst/backend_server/: workflow.py
archive/research_and_analyst/config/: configuration.yaml
archive/research_and_analyst/notebook/: test.ipynb
generated_report/Let_s_talk_about_astrology_how_it_is_a_b_50da78a4_20251101_144446/: Let_s_talk_about_astrology_how_it_is_a_b_50da78a4_20251101_144446.docx
generated_report/Let_s_talk_about_astrology_how_it_is_a_b_50da78a4_20251101_213904/: report.docx
generated_report/langgraph_and_it_s_property_7d1abe5c_20251101_134720/: langgraph_and_it_s_property_7d1abe5c_20251101_134720.docx
generated_report/langgraph_and_it_s_property_7d1abe5c_20251101_135339/: langgraph_and_it_s_property_7d1abe5c_20251101_135339.docx
generated_report/langgraph_and_it_s_property_7d1abe5c_20251101_144325/: langgraph_and_it_s_property_7d1abe5c_20251101_144325.docx
notebook/: test.ipynb
