
[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automatedresearchreportgeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "arxiv>=2.2.0",
    "bcrypt==3.2.2",
    "fastapi==0.120.0",
    "httpx==0.28.1",
    "ipykernel==6.30.1",
    "jinja2==3.1.6",
    "langchain-community==0.3.30",
    "langchain-core==0.3.78",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.3.32",
    "langchain-tavily>=0.2.12",
    "langgraph==0.6.8",
    "passlib==1.7.4",
    "pymupdf>=1.26.5",
    "python-docx==1.2.0",
    "python-multipart>=0.0.20",
    "reportlab==4.4.4",
    "serpapi>=0.1.5",
    "sqlalchemy==2.0.43",
    "structlog==25.4.0",
    "tavily-python==0.7.12",
    "uvicorn==0.38.0",
    "wikipedia==1.4.0",
]

# Optional: authors, license
authors = [{ name = "Shankar Viswanath" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["."]
include = ["research_and_analyst*"]
